--- a/Titanic/Titanic.ipynb
+++ b/Titanic/Titanic.ipynb
@@ -9,6 +9,17 @@
     "**Hi, welcome. <br>\n",
     "In this notebook I present a gentle description of how *linear regression model* mathematically works in Titanic classification problem.**\n",
     "\n",
+    "## Preparing Dataset\n",
+    "\n",
+    "1. Read dataset\n",
+    "2. Clean dataset\n",
+    "3. Label encoding \n",
+    "\n",
+    "## Model Creation\n",
+    "1. Linear regression \n",
+    "2. Single prediction \n",
+    "3. Mathematics behind code explained\n",
+    "\n",
     "## Imports\n",
     "\n",
     "[pandas](https://pandas.pydata.org/): used for data manipulation and analysis. <br>\n",
@@ -17,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "dietary-picnic",
    "metadata": {},
    "outputs": [],
@@ -32,11 +43,7 @@
    "id": "faced-nirvana",
    "metadata": {},
    "source": [
-    "## Preparing Dataset\n",
-    "\n",
-    "1. Read dataset\n",
-    "2. Clean dataset\n",
-    "3. Label encoding "
+    "## Preparing Dataset"
    ]
   },
   {
@@ -49,18 +56,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "healthy-monday",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_set = pd.read_csv(\"train.csv\")\n",
-    "test_set  = pd.read_csv(\"test.csv\")"
+    "test_set  = pd.read_csv(\"test.csv\")\n",
+    "test_ids  = test_set[\"PassengerId\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "roman-florist",
    "metadata": {},
    "outputs": [
@@ -313,7 +321,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "documented-economy",
    "metadata": {},
    "outputs": [
@@ -554,7 +562,7 @@
        "[418 rows x 11 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "administrative-architect",
    "metadata": {},
    "outputs": [
@@ -595,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "square-boxing",
    "metadata": {},
    "outputs": [],
@@ -615,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "enclosed-macintosh",
    "metadata": {},
    "outputs": [],
@@ -635,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "interracial-relief",
    "metadata": {},
    "outputs": [],
@@ -661,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "first-south",
    "metadata": {},
    "outputs": [],
@@ -678,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "joint-experiment",
    "metadata": {},
    "outputs": [],
@@ -701,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "encouraging-transsexual",
    "metadata": {},
    "outputs": [
@@ -737,35 +745,35 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
+       "      <td>male</td>\n",
        "      <td>22.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>female</td>\n",
        "      <td>38.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
+       "      <td>female</td>\n",
        "      <td>26.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>female</td>\n",
        "      <td>35.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
+       "      <td>male</td>\n",
        "      <td>35.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -779,35 +787,35 @@
        "      <th>886</th>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>male</td>\n",
        "      <td>27.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>887</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>female</td>\n",
        "      <td>19.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>888</th>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
+       "      <td>female</td>\n",
        "      <td>28.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>889</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>male</td>\n",
        "      <td>26.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>890</th>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
+       "      <td>male</td>\n",
        "      <td>32.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -816,23 +824,23 @@
        "</div>"
       ],
       "text/plain": [
-       "     Survived  Pclass  Sex   Age\n",
-       "0           0       3    1  22.0\n",
-       "1           1       1    0  38.0\n",
-       "2           1       3    0  26.0\n",
-       "3           1       1    0  35.0\n",
-       "4           0       3    1  35.0\n",
-       "..        ...     ...  ...   ...\n",
-       "886         0       2    1  27.0\n",
-       "887         1       1    0  19.0\n",
-       "888         0       3    0  28.0\n",
-       "889         1       1    1  26.0\n",
-       "890         0       3    1  32.0\n",
+       "     Survived  Pclass     Sex   Age\n",
+       "0           0       3    male  22.0\n",
+       "1           1       1  female  38.0\n",
+       "2           1       3  female  26.0\n",
+       "3           1       1  female  35.0\n",
+       "4           0       3    male  35.0\n",
+       "..        ...     ...     ...   ...\n",
+       "886         0       2    male  27.0\n",
+       "887         1       1  female  19.0\n",
+       "888         0       3  female  28.0\n",
+       "889         1       1    male  26.0\n",
+       "890         0       3    male  32.0\n",
        "\n",
        "[891 rows x 4 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,14 +855,14 @@
    "id": "whole-childhood",
    "metadata": {},
    "source": [
-    "**In terms of linear regression, all variables must be quantitative (continuous or discrete), however, from our 4 selected variables, \"Sex\" is a nominal categorical variable (Male or Famale). The code bellow show how to convert it to a numeric representation. It's still a category, but now we're mapping from Male to 1 and Famale to 0.** <br>\n",
+    "**In terms of linear regression, all variables must be quantitative (continuous or discrete), however, from our 4 selected variables, \"Sex\" is a nominal categorical variable (Male or Famale). The code bellow show how to convert it to a numeric representation (label enconder). It's still a category, but now we're mapping from Male to 1 and Famale to 0.** <br>\n",
     "\n",
     "Consider to checking out this documentation to understand why I chose the following methods. [sklearn.preprocessing.LabelEncoder](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.LabelEncoder.html)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "mighty-klein",
    "metadata": {},
    "outputs": [],
@@ -868,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "interpreted-polymer",
    "metadata": {},
    "outputs": [
@@ -948,7 +956,7 @@
        "4         0       3    1  35.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,10 +972,7 @@
    "id": "greatest-export",
    "metadata": {},
    "source": [
-    "## Model Creation\n",
-    "1. Linear regression \n",
-    "2. Single prediction \n",
-    "3. Mathmatics behind code explained"
+    "## Model Creation"
    ]
   },
   {
@@ -980,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "hydraulic-theta",
    "metadata": {},
    "outputs": [
@@ -990,7 +995,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "dominican-conducting",
    "metadata": {
     "scrolled": true
@@ -1028,6 +1033,254 @@
     "Pclass = 1; Age = 27; Sex = 1\n",
     "\n",
     "print(\"Probability to survive: {:.2f}%\".format(linear_reg.predict([[Pclass, Age, Sex]])[0]*100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "formed-overall",
+   "metadata": {},
+   "source": [
+    "**Mathematics behind code explained**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "copyrighted-topic",
+   "metadata": {},
+   "source": [
+    "\n",
+    "$X$: train\\_set <br>\n",
+    "$X \\in \\mathbb{R^ {n_x \\times m}}$ <br>\n",
+    "$Y \\in \\mathbb{R^{1 \\times m}} \\ \\ \\ \\ Y=[y^{(1)},y^{(2)},..., y^{(m)}]$ <br> \n",
+    "$W$\n",
+    "X.shape = (891,4) $\\land$ (X.shape = (nx, m)) $ \\rightarrow X_{(4,891)}$ <br>\n",
+    "Y.shape = (1, m) <br>\n",
+    "\n",
+    "**Definitions:** \n",
+    "<br>\\#things = the number of things <br>\n",
+    "$n_x$ = #features <br>\n",
+    "$m$ = #examples <br>\n",
+    "\n",
+    "Recall that this is a binary classification problem (a person $p$ aboard to Titanic  survived or not survived) \n",
+    "and based on three variables of interest: $x_1,x_2$ and $x_3$: (Pclass, Age and Sex) <br>\n",
+    "the model will output the probability of this person had survived or not. <br>\n",
+    "Therefore, a linear regression function that predicts this behaviour is given by:<br>\n",
+    "\n",
+    "\n",
+    "\\begin{equation}\n",
+    " ŷ_1 = w_1x_1 + w_2x_2 + w_3x_3 + β \\ \\ \\ (1)\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "\n",
+    "and to predict the entire train_set: <br>\n",
+    "\\begin{equation}\n",
+    "Ŷ=W^TX + β  \\ \\ \\ (2)\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "emotional-genius",
+   "metadata": {},
+   "source": [
+    "**After model training we can consult it's weights through:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "divided-senator",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weights  : [-0.1857794  -0.00499336 -0.49922946] \n",
+      "intercept: 1.2826439065893616\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"weights  : {} \\nintercept: {}\".format(linear_reg.coef_,linear_reg.intercept_))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "growing-letters",
+   "metadata": {},
+   "source": [
+    "**Let's use the equation (1) and weights of model to predict the following cases:** <br>\n",
+    "\n",
+    "A person $p_1$ and $p_2$ where, <br>\n",
+    "$p_1$ = Pclass = 3, Age = 27 and Sex = male <br>\n",
+    "$p_2$ = Pclass = 1, Age = 27 and Sex = male <br>\n",
+    "\n",
+    "<br>\n",
+    "$p_1 \\rightarrow y_1 \\approx -0.1857*3 -0.0049*27 -0.4992*1 + 1.2826 = 0.094 \\approx$ 9.4% <br>\n",
+    "$p_2 \\rightarrow y_2 \\approx -0.1857*1 -0.0049*27 -0.4992*1 + 1.2826 = 0.4654 \\approx$ 46% <br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "talented-proceeding",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p1 = {\"Pclass\": 3, \"Age\":27, \"Sex\":1}\n",
+    "p2 = {\"Pclass\": 1, \"Age\":27, \"Sex\":1}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "underlying-crisis",
+   "metadata": {},
+   "source": [
+    "**Getting model's parameters (coefficients and intercept)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "equivalent-azerbaijan",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w1, w2, w3 = *linear_reg.coef_,\n",
+    "B          =  linear_reg.intercept_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "chief-mambo",
+   "metadata": {},
+   "source": [
+    "**Computing $p_1$ and $p_2$ probability to survive**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "civic-tourism",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p1 => y1 ≃ 9.13% of chance to survive\n",
+      "p2 => y2 ≃ 46.28% of chance to survive\n"
+     ]
+    }
+   ],
+   "source": [
+    "y1 = (w1 * p1[\"Pclass\"]) + (w2 * p1[\"Age\"]) + (w3 * p1[\"Sex\"]) + B\n",
+    "y2 = (w1 * p2[\"Pclass\"]) + (w2 * p2[\"Age\"]) + (w3 * p2[\"Sex\"]) + B\n",
+    "\n",
+    "print(\"p1 => y1 ≃ {}% of chance to survive\".format(\"%.2f\" % (y1*100)))\n",
+    "print(\"p2 => y2 ≃ {}% of chance to survive\".format(\"%.2f\" % (y2*100)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dutch-middle",
+   "metadata": {},
+   "source": [
+    "**We solved this problem with linear regression, but logistic regression is better because it's a binary classification (0 or 1). Linear regression does not have a predefined range.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "numerous-custom",
+   "metadata": {},
+   "source": [
+    "[LogisticRegression](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html) <br>\n",
+    "[train_test_split](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "micro-split",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "y = train_set[\"Survived\"]\n",
+    "X = train_set.drop(\"Survived\", axis=1)\n",
+    "\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "qualified-blood",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifier = LogisticRegression(random_state=0, max_iter=1000).fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "infinite-asthma",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8100558659217877"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions = classifier.predict(X_val)\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "accuracy_score(y_val, predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "second-chapel",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission_preds = classifier.predict(test_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "nonprofit-replica",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({\"PassengerId\":test_ids.values,\n",
+    "                   \"Survived\": submission_preds,\n",
+    "                  })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "atmospheric-patient",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"submission.csv\", index=False)"
    ]
   }
  ],
